--- a/docs/layouts/partials/parts/icon.html
+++ b/docs/layouts/partials/parts/icon.html
@@ -845,3 +845,50 @@
 <p class="iconBtn blue large"><a href="#"><span class="icon ap-twitter"></span></a></p>
 <p class="iconBtn orange big"><a href="#"><span class="icon ap-viadeo"></span></a></p>
 <p class="iconBtn red big"><a href="#"><span class="icon ap-television"></span></a></p>
+
+<h2 class="title">バッジ</h2>
+<p class="badge">Info</p>
+<p class="badge">New</p>
+<p class="badge">Free</p>
+
+<h5 class="title">バッジ notification</h5>
+<p class="notification">1</p>
+<p class="notification">10</p>
+<p class="notification">100</p>
+
+<p class="badge round red">1</p>
+<p class="badge round red">10</p>
+<p class="badge round red">100</p>
+
+<h5 class="title">バッジ color</h5>
+
+<p class="badge">Info</p>
+<p class="badge primary">New</p>
+<p class="badge blue">Free</p>
+<p class="badge green">New</p>
+<p class="badge orange">Free</p>
+<p class="badge red">Free</p>
+
+<p class="badge round red">1</p>
+<p class="badge round red">10</p>
+<p class="badge round red">100</p>
+<p class="badge round red">1</p>
+<p class="badge round red">10</p>
+<p class="badge round red">100</p>
+
+<h5 class="title">バッジ size</h5>
+
+<p class="badge primary mini">Info</p>
+<p class="badge primary small">New</p>
+<p class="badge blue">Free</p>
+<p class="badge green large">New</p>
+<p class="badge orange big">Free</p>
+<p class="badge red">Free</p>
+
+<p class="badge round red mini">1</p>
+<p class="badge round red small">1</p>
+<p class="badge round red">1</p>
+<p class="badge round red large">1</p>
+<p class="badge round red big">1</p>
+<p class="badge round red">1</p>
+
