--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -13,6 +13,9 @@
       <a href="">スクロールトリガー2</a>
     </p>
 
+    <h2 class="title">テキスト</h2>
+    {{ partial "parts/paragraph.html" . }}
+
     <h2 class="title">タイトル</h2>
     {{ partial "parts/title.html" . }}
 
