--- a/scss/atomic-package/parts/_box.scss
+++ b/scss/atomic-package/parts/_box.scss
@@ -1,3 +1,21 @@
 .apOverHidden {
   overflow: hidden;
 }
+
+/*
+ * Box Style
+*/
+
+.box {
+
+  &.border {}
+
+  &.bg {}
+
+  // state size
+
+
+  > .box {}
+
+
+}
