refactor docs style

--- a/docs/layouts/core/single.html
+++ b/docs/layouts/core/single.html
@@ -22,6 +22,8 @@
       <li class="title">BASE</li>
       <li><a href="/{{ . }}/base/">Base</a></li>
       <li class="title">ATOMIC</li>
+      <li><a href="/{{ . }}/text/">Text</a></li>
+      <li><a href="/{{ . }}/title/">Title</a></li>
       <li><a href="/{{ . }}/button/">Button</a></li>
       <li><a href="/{{ . }}/icon">Icon</a></li>
       <li><a href="/{{ . }}/table">Table</a></li>
