--- a/docs/layouts/partials/parts/tab_menu.html
+++ b/docs/layouts/partials/parts/tab_menu.html
@@ -2,14 +2,14 @@
   <ul class="tabList" data-ap-tab>
     <li>
       <a href="">Home</a>
-    </li><!--
- --><li class="active">
+    </li>
+    <li class="active">
       <a href="">Pages</a>
-    </li><!--
- --><li>
+    </li>
+    <li>
       <a href="">Pages</a>
-    </li><!--
- --><li class="disable">
+    </li>
+    <li class="disable">
       <a href="">disable</a>
     </li>
   </ul>
@@ -23,14 +23,14 @@
   <ul class="tabList">
     <li class="active">
       <a href="">Home</a>
-    </li><!--
- --><li>
+    </li>
+    <li>
     <a href="">Pages</a>
-  </li><!--
- --><li>
+  </li>
+    <li>
     <a href="">Pages</a>
-  </li><!--
- --><li>
+  </li>
+    <li>
     <a href="">Pages</a>
   </li>
   </ul>
@@ -42,16 +42,16 @@
   <ul class="tabList">
     <li class="active">
       <a href="">Home</a>
-    </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
   </ul>
 </nav>
 
@@ -63,16 +63,16 @@
   <ul class="tabList">
     <li class="active">
       <a href="">Home</a>
-    </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
   </ul>
 </nav>
 
@@ -82,16 +82,16 @@
   <ul class="tabList">
     <li class="active">
       <a href="">Home</a>
-    </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li><!--
- --><li>
-    <a href="">Pages</a>
-  </li>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
   </ul>
 </nav>
 
