--- a/docs/layouts/partials/parts/paragraph.html
+++ b/docs/layouts/partials/parts/paragraph.html
@@ -1,5 +1,3 @@
-<h4 class="title">テキスト</h4>
-
 <p class="text">テキストテキストテキストテキストテキストテキストテキスト</p>
 
 <p class="text strong">Strong is used to indicate strong importance</p>
@@ -8,7 +6,7 @@
 
   <p class="text">The <u>u element</u> is text with an unarticulated, though explicitly rendered, non-textual annotation</p>
 
-<p class="text link"></p>
+<p class="text link"><a href="">テキストリンクテキストリンクテキストリンク</a></p>
 
 <p class="text">The <i>i element</i> is text that is set off from the normal text</p>
 
@@ -32,3 +30,5 @@
 <p class="text blue">テキストテキストテキストテキストテキストテキストテキスト</p>
 <p class="text orange">テキストテキストテキストテキストテキストテキストテキスト</p>
 <p class="text red">テキストテキストテキストテキストテキストテキストテキスト</p>
+
+<p class="text copy">コピーライト</p>
