create docs page

--- a/docs/layouts/core/single.html
+++ b/docs/layouts/core/single.html
@@ -17,16 +17,17 @@
   </nav>
 
   <div class="sideMenu docs">
+    <h3>ATOMIC PARTS</h3>
     <ul class="navList">
       {{ with .Section }}
       <li class="title">BASE</li>
       <li><a href="/{{ . }}/base/">Base</a></li>
-      <li class="title">ATOMIC</li>
+      <li><a href="/{{ . }}/utility/">Utility</a></li>
       <li><a href="/{{ . }}/text/">Text</a></li>
       <li><a href="/{{ . }}/title/">Title</a></li>
       <li><a href="/{{ . }}/button/">Button</a></li>
-      <li><a href="/{{ . }}/icon">Icon</a></li>
-      <li><a href="/{{ . }}/table">Table</a></li>
+      <li><a href="/{{ . }}/list">List</a></li>
+      <li><a href="/{{ . }}/thumbnail">Thumbnail</a></li>
       <li class="title">NAVIGATIONS</li>
       <li><a href="/{{ . }}/nav">Nav</a></li>
       <li><a href="/{{ . }}/navbar">Navbar</a></li>
@@ -34,7 +35,21 @@
       <li><a href="/{{ . }}/breadcrumb">Breadcrumb</a></li>
       <li><a href="/{{ . }}/pagination">Pagination</a></li>
       <li><a href="/{{ . }}/tab">Tab</a></li>
-      <li><a href="/{{ . }}/thumbnav">Thumbnav</a></li>
+      <li><a href="/{{ . }}/thumbnav">ThumbNav</a></li>
+      <li class="title">BOX</li>
+      <li><a href="/{{ . }}/box">Box</a></li>
+      <li><a href="/{{ . }}/table">Table</a></li>
+      <li><a href="/{{ . }}/column">Column</a></li>
+      <li><a href="/{{ . }}/badge">Badge</a></li>
+      <li><a href="/{{ . }}/alert">Alert</a></li>
+      <li><a href="/{{ . }}/form">Form</a></li>
+      <li><a href="/{{ . }}/icon">Icon</a></li>
+      <li><a href="/{{ . }}/modalwindow">ModalWindow</a></li>
+      <li><a href="/{{ . }}/progressbars">ProgressBars</a></li>
+      <li><a href="/{{ . }}/overlay">Overlay</a></li>
+      <li><a href="/{{ . }}/animation">Animation</a></li>
+      <li><a href="/{{ . }}/header">Header</a></li>
+      <li><a href="/{{ . }}/footer">Footer</a></li>
       {{ end }}
     </ul>
   </div>
