add docs javascript page

--- a/docs/layouts/javascript/single.html
+++ b/docs/layouts/javascript/single.html
@@ -21,7 +21,15 @@
         <ul class="navList">
             {{ with .Section }}
             <li class="title">BASE</li>
-            <li><a href="/{{ . }}/base/">Base</a></li>
+            <li><a href="/{{ . }}/button/">Button</a></li>
+            <li><a href="/{{ . }}/modalwindow/">ModalWindow</a></li>
+            <li><a href="/{{ . }}/tab/">Tab</a></li>
+            <li><a href="/{{ . }}/switcher/">Switcher</a></li>
+            <li><a href="/{{ . }}/toggle/">Toggle</a></li>
+            <li><a href="/{{ . }}/sidemenu/">SideMenu</a></li>
+            <li><a href="/{{ . }}/smoothscroll/">SmoothScroll</a></li>
+            <li><a href="/{{ . }}/dropdown/">Dropdown</a></li>
+            <li><a href="/{{ . }}/scrollspy/">ScrollSpy</a></li>
             {{ end }}
         </ul>
     </div>
