--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -10,6 +10,13 @@ $colorBlue: #3598DB;
 $colorOrange: #F39C12;
 $colorRed: #E74C3C;
 
+$colorBorderDefault: #D9D9D9;
+$colorBorderPrimary: #243243;
+$colorBorderGreen: #18A68A;
+$colorBorderBlue: #3682B6;
+$colorBorderOrange: #CB8618;
+$colorBorderRed: #DD8177;
+
 $colorAqua: #0ff;
 
 $linkMainColor: #1397E1;
