--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -1020,6 +1020,15 @@ h6.title.big {
   vertical-align: top;
 }
 
+.btn > a:hover,
+.btn > button:hover,
+.btn > input:hover,
+.btn:not(a) > a:hover,
+.btn:not(a) > button:hover,
+.btn:not(a) > input:hover {
+  background: #F5F5F5;
+}
+
 .btn.mini,
 .btn:not(a).mini {
   min-width: 65px;
@@ -1305,6 +1314,12 @@ input.btn {
   /* State */
 }
 
+a.btn:hover,
+button.btn:hover,
+input.btn:hover {
+  background: #F5F5F5;
+}
+
 a.btn.primary,
 button.btn.primary,
 input.btn.primary {
@@ -1488,10 +1503,12 @@ input.btn.lofty {
 
 .btnGroup .btn {
   border-radius: 0;
+  border-right: none;
 }
 
 .btnGroup .btn > a {
   border-radius: 0;
+  border-right-color: transparent;
 }
 
 .btnGroup .btn:first-child,
@@ -1504,26 +1521,32 @@ input.btn.lofty {
 .btnGroup .btn:last-child a {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  border-right-color: #D9D9D9;
 }
 
-.btnGroup .btn.btn + .primary {
-  border-left: #233040 1px solid;
+.btnGroup .btn:last-child.primary,
+.btnGroup .btn:last-child a.primary {
+  border-right-color: #243243;
 }
 
-.btnGroup .btn.btn + .blue {
-  border-left: #0889A8 1px solid;
+.btnGroup .btn:last-child.blue,
+.btnGroup .btn:last-child a.blue {
+  border-right-color: #3682B6;
 }
 
-.btnGroup .btn.btn + .green {
-  border-left: #40986c 1px solid;
+.btnGroup .btn:last-child.green,
+.btnGroup .btn:last-child a.green {
+  border-right-color: #18A68A;
 }
 
-.btnGroup .btn.btn + .orange {
-  border-left: #c38a3a 1px solid;
+.btnGroup .btn:last-child.orange,
+.btnGroup .btn:last-child a.orange {
+  border-right-color: #CB8618;
 }
 
-.btnGroup .btn.btn + .red {
-  border-left: #af4450 1px solid;
+.btnGroup .btn:last-child.red,
+.btnGroup .btn:last-child a.red {
+  border-right-color: #DD8177;
 }
 
 /*
