--- a/scss/atomic-package/parts/_button.scss
+++ b/scss/atomic-package/parts/_button.scss
@@ -32,6 +32,9 @@ $btnLofty: 50px;
   font-size: 14px;
   line-height: 28px;
   vertical-align: top;
+  &:hover {
+    background: #F5F5F5;
+  }
 }
 
 /* Primary */
@@ -354,8 +357,10 @@ input {
   }
   .btn {
     border-radius: 0;
+    border-right: none;
     & > a {
       border-radius: 0;
+      border-right-color: transparent;
     }
 
     &:first-child,
@@ -367,24 +372,27 @@ input {
     &:last-child a {
       border-top-right-radius: 4px;
       border-bottom-right-radius: 4px;
+      border-right-color: $colorBorderDefault;
     }
 
-    &.btn + .primary {
-      border-left: #233040 1px solid;
+    &:last-child,
+    &:last-child a {
+      &.primary {
+        border-right-color: $colorBorderPrimary;
+      }
+      &.blue {
+        border-right-color: $colorBorderBlue;
+      }
+      &.green {
+        border-right-color: $colorBorderGreen;
+      }
+      &.orange {
+        border-right-color: $colorBorderOrange;
+      }
+      &.red {
+        border-right-color: $colorBorderRed;
+      }
     }
-    &.btn + .blue {
-      border-left: #0889A8 1px solid;
-    }
-    &.btn + .green {
-      border-left: #40986c 1px solid;
-    }
-    &.btn + .orange {
-      border-left: #c38a3a 1px solid;
-    }
-    &.btn + .red {
-      border-left: #af4450 1px solid;
-    }
-
   }
 }
 
