--- a/docs/layouts/partials/header_docs.html
+++ b/docs/layouts/partials/header_docs.html
@@ -6,7 +6,7 @@
   {{ partial "meta.html" . }}
 
   <base href="{{ .Site.BaseURL }}">
-  <title> {{ .Title }} : Atomic Package</title>
+  <title>{{ .Title }} - Atomic Package</title>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}
   <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>
