--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -173,6 +173,7 @@
 
     <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
 
+    {{ partial "parts/modalwindow.html" . }}
 
     <h2 class="title">ヘッダー</h2>
     <header class="header">
