--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -4587,6 +4587,8 @@ input.btn.lofty {
 .modalWindow .modalBody {
   width: 800px;
   min-height: 400px;
+  border: #B8B8B8 1px solid;
+  border-radius: 4px;
   background: #fff;
   z-index: 5000;
 }
