refactor modal style

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -186,7 +186,7 @@
     <!--<div class="modalWindow"></div>-->
 
     <div class="modalWindow" id="modalWindow">
-      <div class="modalBody">
+      <div class="modalDialog">
         <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
 
         <div>コンテンツ</div>
