--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -4584,7 +4584,7 @@ input.btn.lofty {
 
 /* Modal Style
 -------------------------------------------------- */
-.modalWindow .modalBody {
+.modalWindow .modalDialog {
   width: 800px;
   min-height: 400px;
   border: #B8B8B8 1px solid;
