refactor thumbnail.html

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -57,146 +57,9 @@
 
     <h2 class="title">サムネイル</h2>
 
-    <h3 class="title">wrap要素</h3>
-    <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <p class="thumbnail circle"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <p class="thumbnail border"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <p class="thumbnail frame"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <h3 class="title">img要素</h3>
-    <img class="thumbnail" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail round" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail border" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-
-    <h3 class="title">カラー</h3>
-
-    <p class="thumbnail small border"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small border primary"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small border green"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small border blue"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small border orange"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small border red"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <img class="thumbnail small border" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small border primary" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small border green" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small border blue" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small border orange" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small border red" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <!--<img class="thumbnail free" src="img/thumbnail_01.jpg" width="45" alt="person"/>-->
+    {{ partial "parts/thumbnail.html" . }}
 
     <br/><br/>
-
-    <p class="thumbnail small frame"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small frame primary"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small frame green"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small frame blue"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small frame orange"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail small frame red"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-
-    <img class="thumbnail small frame" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small frame primary" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small frame green" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small frame blue" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small frame orange" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail small frame red" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <!--<img class="thumbnail free" src="img/thumbnail_01.jpg" width="45" alt="person"/>-->
-
-    <h3 class="title">サイズ</h3>
-    <p class="thumbnail mini"><img src="img/thumbnail_01.jpg" width="30" alt="person"/></p>
-    <p class="thumbnail small"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="60" alt="person"/></p>
-    <p class="thumbnail large"><img src="img/thumbnail_01.jpg" width="90" alt="person"/></p>
-    <p class="thumbnail big"><img src="img/thumbnail_01.jpg" width="120" alt="person"/></p>
-    <!--<p class="thumbnail free"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
-
-    <img class="thumbnail mini" src="img/thumbnail_01.jpg" width="30" alt="person"/>
-    <img class="thumbnail small" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail" src="img/thumbnail_01.jpg" width="60" alt="person"/>
-    <img class="thumbnail large" src="img/thumbnail_01.jpg" width="90" alt="person"/>
-    <img class="thumbnail big" src="img/thumbnail_01.jpg" width="120" alt="person"/>
-    <!--<img class="thumbnail free" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
-
-    <br/><br/>
-
-    <h4 class="title">サイズ round</h4>
-
-    <p class="thumbnail mini round"><img src="img/thumbnail_01.jpg" width="30" alt="person"/></p>
-    <p class="thumbnail small round"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="60" alt="person"/></p>
-    <p class="thumbnail large round"><img src="img/thumbnail_01.jpg" width="90" alt="person"/></p>
-    <p class="thumbnail big round"><img src="img/thumbnail_01.jpg" width="120" alt="person"/></p>
-    <!--<p class="thumbnail free round"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
-
-    <img class="thumbnail mini round" src="img/thumbnail_01.jpg" width="30" alt="person"/>
-    <img class="thumbnail small round" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail round" src="img/thumbnail_01.jpg" width="60" alt="person"/>
-    <img class="thumbnail large round" src="img/thumbnail_01.jpg" width="90" alt="person"/>
-    <img class="thumbnail big round" src="img/thumbnail_01.jpg" width="120" alt="person"/>
-    <!--<img class="thumbnail free" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
-
-    <h4 class="title">サイズ circle</h4>
-
-    <p class="thumbnail mini circle"><img src="img/thumbnail_01.jpg" width="30" alt="person"/></p>
-    <p class="thumbnail small circle"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail circle"><img src="img/thumbnail_01.jpg" width="60" alt="person"/></p>
-    <p class="thumbnail large circle"><img src="img/thumbnail_01.jpg" width="90" alt="person"/></p>
-    <p class="thumbnail big circle"><img src="img/thumbnail_01.jpg" width="120" alt="person"/></p>
-    <!--<p class="thumbnail free circle"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
-
-    <img class="thumbnail mini circle" src="img/thumbnail_01.jpg" width="30" alt="person"/>
-    <img class="thumbnail small circle" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="60" alt="person"/>
-    <img class="thumbnail large circle" src="img/thumbnail_01.jpg" width="90" alt="person"/>
-    <img class="thumbnail big circle" src="img/thumbnail_01.jpg" width="120" alt="person"/>
-    <!--<img class="thumbnail free circle" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
-
-    <br/><br/>
-
-    <h4 class="title">サイズ border</h4>
-
-    <p class="thumbnail mini border"><img src="img/thumbnail_01.jpg" width="30" alt="person"/></p>
-    <p class="thumbnail small border"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail border"><img src="img/thumbnail_01.jpg" width="60" alt="person"/></p>
-    <p class="thumbnail large border"><img src="img/thumbnail_01.jpg" width="90" alt="person"/></p>
-    <p class="thumbnail big border"><img src="img/thumbnail_01.jpg" width="120" alt="person"/></p>
-    <!--<p class="thumbnail free circle"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
-
-    <img class="thumbnail mini border" src="img/thumbnail_01.jpg" width="30" alt="person"/>
-    <img class="thumbnail small border" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail border" src="img/thumbnail_01.jpg" width="60" alt="person"/>
-    <img class="thumbnail large border" src="img/thumbnail_01.jpg" width="90" alt="person"/>
-    <img class="thumbnail big border" src="img/thumbnail_01.jpg" width="120" alt="person"/>
-    <!--<img class="thumbnail free circle" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
-
-    <br/><br/>
-
-    <h4 class="title">サイズ frame</h4>
-
-    <p class="thumbnail mini frame"><img src="img/thumbnail_01.jpg" width="30" alt="person"/></p>
-    <p class="thumbnail small frame"><img src="img/thumbnail_01.jpg" width="45" alt="person"/></p>
-    <p class="thumbnail frame"><img src="img/thumbnail_01.jpg" width="60" alt="person"/></p>
-    <p class="thumbnail large frame"><img src="img/thumbnail_01.jpg" width="90" alt="person"/></p>
-    <p class="thumbnail big frame"><img src="img/thumbnail_01.jpg" width="120" alt="person"/></p>
-    <!--<p class="thumbnail free circle"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
-
-    <img class="thumbnail mini frame" src="img/thumbnail_01.jpg" width="30" alt="person"/>
-    <img class="thumbnail small frame" src="img/thumbnail_01.jpg" width="45" alt="person"/>
-    <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="60" alt="person"/>
-    <img class="thumbnail large frame" src="img/thumbnail_01.jpg" width="90" alt="person"/>
-    <img class="thumbnail big frame" src="img/thumbnail_01.jpg" width="120" alt="person"/>
-    <!--<img class="thumbnail free circle" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
-
-    <br/><br/>
-
-
 
     <h2 class="title">ボックス</h2>
     {{ partial "parts/box.html" . }}
